
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int O_RDWR ;
 int open (char*,int ) ;
 char* orig_name ;
 int printf (char*,int) ;
 int snprintf (char*,int,char*,char*) ;
 int stop ;
 int strlen (char*) ;

void *openclose( void *ptr )
{
    int j,fd,m,k;
    char origname[1024];
    snprintf(origname, sizeof origname, "test_dir/%s", orig_name);

    for (j=0;j<8000 && !stop;j++ )
    {
        open(origname,O_RDWR);

    }
    printf("alloc_len : %d\n", 48 + strlen(orig_name)+1);

}
