; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_44302.c_openclose.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_44302.c_openclose.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [12 x i8] c"test_dir/%s\00", align 1
@orig_name = common dso_local global i8* null, align 8
@stop = common dso_local global i32 0, align 4
@O_RDWR = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [16 x i8] c"alloc_len : %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @openclose(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca [1024 x i8], align 16
  store i8* %0, i8** %3, align 8
  %9 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 0
  %10 = load i8*, i8** @orig_name, align 8
  %11 = call i32 @snprintf(i8* %9, i32 1024, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i8* %10)
  store i32 0, i32* %4, align 4
  br label %12

12:                                               ; preds = %25, %1
  %13 = load i32, i32* %4, align 4
  %14 = icmp slt i32 %13, 8000
  br i1 %14, label %15, label %19

15:                                               ; preds = %12
  %16 = load i32, i32* @stop, align 4
  %17 = icmp ne i32 %16, 0
  %18 = xor i1 %17, true
  br label %19

19:                                               ; preds = %15, %12
  %20 = phi i1 [ false, %12 ], [ %18, %15 ]
  br i1 %20, label %21, label %28

21:                                               ; preds = %19
  %22 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 0
  %23 = load i32, i32* @O_RDWR, align 4
  %24 = call i32 @open(i8* %22, i32 %23)
  br label %25

25:                                               ; preds = %21
  %26 = load i32, i32* %4, align 4
  %27 = add nsw i32 %26, 1
  store i32 %27, i32* %4, align 4
  br label %12

28:                                               ; preds = %19
  %29 = load i8*, i8** @orig_name, align 8
  %30 = call i32 @strlen(i8* %29)
  %31 = add nsw i32 48, %30
  %32 = add nsw i32 %31, 1
  %33 = call i32 @printf(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0), i32 %32)
  %34 = load i8*, i8** %2, align 8
  ret i8* %34
}

declare dso_local i32 @snprintf(i8*, i32, i8*, i8*) #1

declare dso_local i32 @open(i8*, i32) #1

declare dso_local i32 @printf(i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
